--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 == Furious Typist
 
+I'm testing some monorepo PR stuff!
+
 Furious Typist is a simple blogging framework written in Ruby on Rails
 
 {<img src="https://codeclimate.com/github/toddmohney/furious-typist.png" />}[https://codeclimate.com/github/toddmohney/furious-typist]
