--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,7 @@
 == Furious Typist
 
 I'm testing some monorepo PR stuff!
+Moar changes
 
 Furious Typist is a simple blogging framework written in Ruby on Rails
 
