--- a/README.rdoc
+++ b/README.rdoc
@@ -2,6 +2,7 @@
 
 I'm testing some monorepo PR stuff!
 Moar changes
+Moar moar changes
 
 Furious Typist is a simple blogging framework written in Ruby on Rails
 
