--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,6 @@
 == Furious Typist
 
+Such testing!
 Furious Typist is a simple blogging framework written in Ruby on Rails
 
 {<img src="https://codeclimate.com/github/toddmohney/furious-typist.png" />}[https://codeclimate.com/github/toddmohney/furious-typist]
