--- a/README.rdoc
+++ b/README.rdoc
@@ -4,3 +4,4 @@ Furious Typist is a simple blogging framework written in Ruby on Rails
 
 {<img src="https://codeclimate.com/github/toddmohney/furious-typist.png" />}[https://codeclimate.com/github/toddmohney/furious-typist]
 {<img src="https://travis-ci.org/toddmohney/furious-typist.png?branch=master" alt="Build Status" />}[https://travis-ci.org/toddmohney/furious-typist]
+asdf
